Here is a good start.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-<p>Jane Byrne</p>
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>My Family Website</title>
+   </head>
+   <body>
+      <header>
+          <h1>The Byrne Family</h1>
+      <h2>Members:</h2>
+      <nav>
+          <ul>
+              <li>Anne Catherine Byrne</li> 
+              <li>Thomas Matthew Byrne</li>
+              <li>Jane Catherine Byrne</li>
+              <li>John Luke Byrne</li>
+              <li>Caroline Anne Byrne</li>
+              <li>Elizabeth Anne Byrne</li>
+              <li>Sammy Shaggles Snowball Walker Byrne</li>
+            </ul>
+      </nav>
+    </header>
+    <main>
+        <h3>Anne Catherine Byrne</h3>
+        <p>Information about Mom</p>
+        <h3>Thomas Matthew Byrne</h3>
+        <p>Information about Dad</p>
+        <h3>Jane Catherine Byrne</h3>
+        <p>Paragraph about me</p>
+        <h3>John Luke Byrne</h3>
+        <p>Paragraph about Jumper</p>
+        <h3>Caroline Anne Byrne</h3>
+        <p>Paragraph about Lulu</p>
+        <h3>Elizabeth Anne Byrne</h3>
+        <p>Paragraph about Lizzie</p>
+        <h3>Sammy</h3>
+        <p>Paragraph about Sammy</p>
+    </main>
+   </body>
+</html>
