--- a/index.html
+++ b/index.html
@@ -2,38 +2,126 @@
 <html>
    <head>
       <title>My Family Website</title>
+      <link rel="stylesheet" href="style.css">
    </head>
    <body>
-      <header>
-          <h1>The Byrne Family</h1>
+    <header>
+        <h1>The Byrne Family</h1>
       <h2>Members:</h2>
       <nav>
           <ul>
-              <li>Anne Catherine Byrne</li> 
-              <li>Thomas Matthew Byrne</li>
-              <li>Jane Catherine Byrne</li>
-              <li>John Luke Byrne</li>
-              <li>Caroline Anne Byrne</li>
-              <li>Elizabeth Anne Byrne</li>
-              <li>Sammy Shaggles Snowball Walker Byrne</li>
+              <li><a href="#anne">Mom</a></li> 
+              <li><a href="#tom">Dad</a></li>
+              <li><a href="#jane">Jane</a></li>
+              <li><a href="#john">John</a></li>
+              <li><a href="#caroline">Caroline</a></li>
+              <li><a href="#elizabeth">Elizabeth</a></li>
+              <li><a href="#sammy">Sammy</a></li>
             </ul>
-      </nav>
+        </nav>
     </header>
     <main>
-        <h3>Anne Catherine Byrne</h3>
-        <p>Information about Mom</p>
-        <h3>Thomas Matthew Byrne</h3>
-        <p>Information about Dad</p>
-        <h3>Jane Catherine Byrne</h3>
-        <p>Paragraph about me</p>
-        <h3>John Luke Byrne</h3>
-        <p>Paragraph about Jumper</p>
-        <h3>Caroline Anne Byrne</h3>
-        <p>Paragraph about Lulu</p>
-        <h3>Elizabeth Anne Byrne</h3>
-        <p>Paragraph about Lizzie</p>
-        <h3>Sammy</h3>
-        <p>Paragraph about Sammy</p>
+        <article>
+            <section>
+                <a name="anne"></a>
+                <h3>Mom</h3>
+                <figure>
+                    <img id="annePicture" src="pictures/MOM.jpg">
+                    <figcaption>Mom helping me fold the blankets at the yoga studio on my birthday.</figcaption>
+                </figure>
+                <p>Full Name: Anne Catherine Faber Byrne<br>
+                    Nickname(s): Mom, Tweetie<br>
+                    Favorite Color: red<br>
+                    Anne grew up in Dubuque, IA to Dennis and Jill Faber. She has two older brothers. 
+                    Growing up, she enjoyed running track and playing basketball.
+                    Anne attended Creighton University where she studied elementary education and met her husband, Tom.
+                    She worked as an elementary school teacher until she has her 3rd child and became a fulltime mom. 
+                    She now lives in Omaha, NE with the rest of her family.
+                </p>
+            </section>
+            <section>
+                <a name="tom"></a>
+                <h3>Dad</h3>
+                <figure>
+                    <img id= "tomPicture" src="pictures/DAD.jpg">
+                    <figcaption>Dad drinking out of a pineapple in the Dominican Republic.</figcaption>
+                </figure>
+                <p>Full Name: Thomas Matthew Byrne<br>
+                    Nickname(s): Dad, Tom, Tommy<br>
+                    Favorite Color: blue<br>
+                    Tom grew up in St. Louis, MO. He is the sixth child of 12 total children raised by Paul and Shirley Byrne.
+                    Tom played guitar growing up. He attended Creighton University where he studied biology and met his wife Anne.
+                    After graduating, he attended the University of Nebraska Medical School to become a pediatrician. He now lives in 
+                    Omaha Nebraska with his wife and children. 
+                </p>
+            </section>
+            <section>
+                <a name="jane"></a>
+                <h3>Jane</h3>
+                <figure>
+                    <img id="janePicture" src="pictures/JANE.jpg">
+                    <figcaption>Me on the beach in South Carolina. My sister is playing soccer in the background.</figcaption>
+                </figure>
+                <p>Full Name: Jane Catherine Byrne<br>
+                    Nickname: Janie, JC, Janie Cakes, Janie Angel, Anita<br>
+                    Favorite Color: green<br>
+                    Jane was raised in Omaha Nebraska. She did ballet and played the violin growing up. She attended Creighton University
+                    where she studied philosophy and dance. She has her Montessori certification in primary education. She is an aspiring
+                    web developer/computer programmer. She works a lot of jobs, which she knows is a choice, but she would like to not anymore.
+                    She lives in Kansas City, MO. 
+                
+                </p>
+            </section>
+            <section>
+                <a name="john"></a>
+                <h3>John</h3>
+                <img id="johnPicture" src="pictures/JUMPER.jpg">
+                <p>Full Name: John Luke Byrne<br>
+                    Nickname(s): Jumper, Jumps, Sean Paul<br>
+                    Favorite Color: blue<br>
+                    John was raised in Omaha, NE. Growing up, he did gymnastics, played the violin, and was a forensics champion.
+                    He attended Creighton University where he studied creative writing. He recently graduated from the University 
+                    of Charleston with his masters in poetry. He lives in Charleston, SC.
+                </p>
+                </section>
+            <section>
+                <a name="caroline"></a>
+                <h3>Caroline</h3>
+                <img id= "carolinePicture" src="pictures/LULU.jpg">
+                <p>Full Name: Caroline Anne Byrne<br>
+                    Nickname(s): Lulu, Cindy, Smiley<br>
+                    Favorite Color: Aqua<br>
+                    Caroline was raised in Omaha, NE. She was an avid soccer player growing up. She also played the violin.
+                    She attended Creighton University where she studied Spanish and medical anthropology. She is currently 
+                    working at an optometrist clinic. She plans on going to med school.
+                </p>
+            </section>
+            <section>
+                <a name="elizabeth"></a>
+                <h3>Elizabeth</h3>
+                <img id="lizziePicture" src="pictures/LIZZIE.jpg">
+                <p>Full Name: Elizabeth Anne Byrne<br>
+                    Nickname(s): Lizzie, Ms. L<br>
+                    Favorite Color: Blue<br>
+                    Lizzie is the youngest of the Byrne siblings. She goes to Saint Louis University. Everyone
+                    expects great things from her.
+                </p>
+            </section>
+            <section>
+                <a name="sammy"></a>
+                <h3>Sammy</h3>
+                <img src="pictures/SAMMY.jpg">
+                <p>Full Name: Sammy Shaggles Snowball Walker Byrne<br>
+                    Nickname(s): Sweet Sam, Shaggles, Stinky Tuskadaro, Tail-Wagger<br>
+                    Favorite Color: Sam is a dog...<br>
+                    Sammy has been 13 years old for the last 5 years. He wears a diaper and he always has to be
+                    right in the middle of the group.
+                </p>
+            </section>
+        </article>
     </main>
+    <footer>
+        <p>&#169 Jane Byrne 2019</p>
+    </footer>
    </body>
 </html>
